src/components/ChatApp/ChatApp.css
/* ... */
.dark .message-container.SUSI::after{
  border-color:#194b5e #194b5e rgb(25, 75, 94) rgb(25, 75, 94);
  background:rgba(25, 147, 147, 0.2);
}

.message-time, .thread-time {
  list-style-type: none;
  font-size: 12px;
  color: #90a4ae;
  margin: 3px 0px -3px -38px;
  padding: 0;
  text-align: right;
}
.response-time{
  margin: 3px -9px -3px 1px;
}
.feedback{
    list-style-type: none;
    font-size: 12px;
    color: #90a4ae;
    margin: -4px -5px -7px 0px;
    padding: 0;
    text-align: right;
}
.dark .message-time, .thread-time{
  float: right;
  color: #7eaaaf;
  margin: 7px 15px -7px 0;

}

.message-text, .thread-last-message {
  font-size: 14px;
  margin: 0;
  padding: 0;
  overflow-wrap: break-word;
}

.message-pane{
  margin: 0 auto;
  width: 100vw;
  max-width: 700px;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.compose {
  position: fixed;
  bottom: 0;
  margin: 0;
  border: none;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
  background: var(--compose);
  box-shadow: 0 -1px 4px 0 rgba(0,0,0,.12);
  z-index: 2;
    transform: translate3d(0140px,0);
  transition: transform .25s cubic-bezier(0,0,.3,1) .3s;
  pointer-events: auto;
  opacity: 1;
  width: 100vw;
  max-width: 700px;
  overflow-x: hidden;
  overflow-y: hidden;
  background: #f5f4f6;
  min-height: 75px;
}

.dark .compose{
  background: rgba(30, 87, 153, 0.02);
  color: #0AD5C1;
}

.scrollBottom{
  position: fixed;
  margin: 0;
  border: none;
  width: 100vw;
  max-width: 700px;
  bottom: 75px;
  overflow-x: hidden;
  overflow-y: hidden;
}

.message-composer {
  width: 100%;
  margin: 0 8px 0 0;
  padding: 14px 9px 8px 9px;
  font-size: 14px;
  border: none;
  background: 0 0;
  text-align: left;
  color: inherit;
  -webkit-appearance: none;
  border-radius: 0;
  display: block;
  text-align: left;
  color: inherit;
  outline: 0;
}

.dark .message-composer{
  width: 100%;
  margin: 0 auto;
  border-top: 1px solid rgba(240, 240, 240, 0.56);
}

.dark .message-composer textarea{
  color: #0AD5C1;
  background: rgba(0, 0, 0, 0.01);
}
.textBack{
    max-width: 89%;
    border-radius: 10px;
    display: block;
    position: relative;
    box-sizing: content-box;
    line-height: 20px;
    font-size: 15px;
    min-height: 20px;
    border: none;
    padding: 10px 12px;
    overflow-y: scroll;
    max-height: 80px;
}
.textBack::-webkit-scrollbar {
    width: 6px ;
    height: 6px ;
}

.textBack::-webkit-scrollbar-thumb {
    background-color: rgba(0,0,0,0.2);
}
.textBack::-webkit-scrollbar-track {
    background: rgba(255,255,255,0.08);
}
textarea {
  border: none;
  width: 100%;
  outline: none;
  box-shadow: none;
  resize: none;
  font-size: 16px;
  font-family: "Product Sans", sans-serif;
  font-weight: 300;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  margin-top: 3px;
  background: #fff;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  min-height: 80%;
  position: relative;
  top:0px;   background: transparent;

}
.scroll::-webkit-scrollbar {
   display: none;
 }
.scroll {overflow: -moz-scrollbars-none;}

.voice-output{
  font-family: 'Lato', sans-serif;
  width: 500px;
  font-size: 100%;
  max-width: 400px;
  text-align: left;
  padding-right: 20px;
}

@media only screen and (min-width: 0px) and (max-width: 768px){
  textarea{
    width: 100%;
  }
  .textBack {
    width: 81%;
  }
  .Modal{
    padding: 25px 0px 25px 0px;
  }
  .voice-output{
    width: 100%;
    text-align: center;
    padding-right: 0px;
    margin: 0 auto;
  }
  .mic-container{
    margin:14px auto;
    text-align: center;
  }
  .voice-response{
  display: block;
  flex-wrap: row;
  position: relative;
  max-width: 300px;
  margin: 0 auto;
  text-align: center;
}
}
@media only screen and (min-width: 768px) and (max-width: 1024px){
  textarea{
    width: 100%;
  }
}
.leaflet-container {
  height: 150px;
  width: 100%;
  margin: 0 auto;
}

.chatapp {
  margin: 0 auto;
  width: 100vw;
  max-width: 700px;
  overflow-x: hidden;
  overflow-y: hidden;
  background: #eceff1;
  padding: 0;
  margin: 0 auto;
  margin-top: 56px;
  box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
}

.map-marker-icon {
  background: url('../../images/map_marker_icon.png');
  background-size: contain;
  background-repeat: no-repeat;
  width: 25px;
  height: 25px;
}

.swipe-rss-websearch{
    width: 93%;
    margin: 0 auto;
}

.slick-slide{
  margin: 0 10px;
}

.slick-list{
  min-height: 130px;
  padding-top: 15px;
  padding-bottom: 15px;
}

.card{
  height: 225px;
  cursor: pointer;
  position: relative;
}

.card-noImg{
  height: 120px;
  cursor: pointer;
  position: relative;
}

.card-img{
  height: 120px;
  object-fit: contain;
  vertical-align: middle;
}

.card-text{
  margin-top: -35px;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.card-url{
  color: #a9a9a9;
  position: absolute;
  bottom: 10px;
  right: 5px;
  width: 80%;
  text-align: right;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.message-text a {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
}

.dark a{
  color: #80a9a5;
}

.theme-button{
  line-height: 52px;
  background: #19324c;
  height: 56px;
  padding: 0 10px;
  color: #fff;
  font-size: 13px;
  cursor: pointer;
}

.dark .theme-button{
  line-height: 52px;
  background: #607d8b;
  height: 56px;
  padding: 0 10px;
  color:#fff;
}

.dialogStyle div{
    margin: 0 auto;
}
.headerStyle{
  font-family: 'Open Sans', sans-serif;
  margin: 15px 0;
  font-weight: 500;
}
em{
  background-color: orange;
}

.settingsComponents{
  width: 90%;
  text-align: center;
  margin: 0 auto;
}

.settingsForm{
  margin: 0 auto;
  margin-top: 48px;
  padding: 10px 0;
  max-width: 100%;
}

.settingsDialog {
  text-align: left;
  padding-left: 29%;
}

.settingsBtns {
  top: 10px;
}

.settings-toggle {
  max-width: 60%;
  margin-top: 30px;
}
/* ... */

